@@ -2948,7 +2948,7 @@ static int cacheSize;
 - (NSString *) _getURLForX: (int) x 
 					y: (int) y 
 {
-	static char *urlSet = ".?/:;%=&_-,+~#";
+	static char *urlSet = ".?/:;%=&_-,+~#@";
 	int x1=x, x2=x, y1=y, y2=y;
 	int startx=-1, starty=-1, endx, endy;
 	int w = [dataSource width];
